# teloxide-project-template

./: Cargo.toml
src/: main.rs
src/database/traits/: reader.rs
src/database/types/: user.rs
src/handlers/: branches.rs  mod.rs
src/handlers/callback_query/: account_service.rs  balance_service.rs  mod.rs  router.rs
src/handlers/message/: base_commands.rs  mod.rs
src/keyboards/: base_command_keyboards.rs  mod.rs  personal_account_keyboards.rs
src/utils/: callback_builder.rs  callback_parsed.rs  mod.rs  string_parser.rs
