[package]
name = "learn_tgbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.37.0", features = ["rt-multi-thread", "macros"]}
teloxide = {version = "0.12.2", features = ["macros"]}
log = "0.4.21"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio"]}